--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <h1>Welcome to SAI VIDYALAYA INVITATION</h1>
+    <center>
+        <h1></h1>
+    </center><center>
+        <color="red">
+
     <img src="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.15.jpeg"
         
     >        <img src="WhatsApp Image 2026-01-29 at 10.45.16.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.16.jpeg">
