--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <center><h1 style="color:red;">Welcome to SAI VIDYALAYA INVITATION</h1></center>
 
-    <img src="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.15.jpeg"    >        <img src="WhatsApp Image 2026-01-29 at 10.45.16.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.16.jpeg"> <img src="WhatsApp Image 2026-01-29 at 10.45.17.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.17.jpeg">
+   <center><img src="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" ></center>      <img src="WhatsApp Image 2026-01-29 at 10.45.16.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.16.jpeg"> <img src="WhatsApp Image 2026-01-29 at 10.45.17.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.17.jpeg">
         <!DOCTYPE html>
 <html>
 <head>
@@ -22,5 +22,5 @@
     <h2>My Video</h2>
 
     <video width="600" controls>
-        <source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4">
+       <center><source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4"></center>
                </video>
