--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
     <h2>My Video</h2>
 
     <video width="600" controls>
-       <center><source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4"></center>
+       <source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4">
                </video>
