--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 ">
 </head>
 <body>
-   <center><h1 style="color:red;">Welcome to SAI VIDYALAYA INVITATION</h1></center>
+   <center><h1 style="color:red;">Welcome to SAI VIDYALAYA-INVITE T0 SUPERNOVA 2026</h1></center>
 
    <center><img src="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" ></center><CEnter> <img src="WhatsApp Image 2026-01-29 at 10.45.16.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.16.jpeg"> <img src="WhatsApp Image 2026-01-29 at 10.45.17.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.17.jpeg"></CEnter>
         <!DOCTYPE html>
