--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 <body>
    <center><h1 style="color:red;">Welcome to SAI VIDYALAYA-INVITE T0 SUPERNOVA 2026</h1></center>
 
-   <center><img src="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" ></center><CEnter> <img src="WhatsApp Image 2026-01-29 at 10.45.16.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.16.jpeg"> <img src="WhatsApp Image 2026-01-29 at 10.45.17.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.17.jpeg"></CEnter>
-        <!DOCTYPE html>
+   <center><img src="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.15.jpeg" ></center>
+   <center><img src="WhatsApp Image 2026-01-29 at 10.45.16.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.16.jpeg"></center>
+       <!DOCTYPE html>
 <html>
 <head>
     <title>Video Player</title>
 </head>
-<body>
-
-    <h2>My Video</h2>
-
-    <video width="600" controls>
+</body>
    <center> <source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4"></center>
                </video>
