--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
    <center><img src="WhatsApp Image 2026-01-29 at 10.45.16.jpeg" alt="WhatsApp Image 2026-01-29 at 10.45.16.jpeg"></center>
        <!DOCTYPE html>
 <html>
-<head>
-    <title>Video Player</title>
-</head>
+   <body>
+     <center><h2 style="color:blue;">Watch Our Invitation Video</h2></center>
+       <video width="600" height="400" controls>
 </body>
-   <center> <source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4"></center>
+     <center> <source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4"></center>
                </video>
+
+               </html>
