--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
        <!DOCTYPE html>
 <html>
    <body>
-     <center><h2 style="color:blue;">Watch Our Invitation Video</h2></center>
+     <center><h2 style="color:blue;">Welcome to Our SuperNova 2026 Event</h2></center>
        <video width="600" height="400" controls>
-</body>
+
      <center> <source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4"></center>
                </video>
+    </body>
 
                </html>
