--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
      <center><h2 style="color:blue;">Welcome to Our SuperNova 2026 Event</h2></center>
        <video width="600" height="400" controls>
 
-     <center> <source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4"></center>
+     <center><video><source src="WhatsApp Video 2026-01-29 at 21.23.06 (3).mp4" type="video/mp4"></center>
                </video>
     </body>
-
                </html>
